gen/MyParser.java
// Generated from C:/Users/VISION/IdeaProjects/Compiler-Project/src/MyParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class MyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEFUN=1, DEFVAR=2, DEFCONSTANT=3, DEFSTRUCT=4, DEFMACRO=5, DEFCLASS=6, 
		DEFPARAMETER=7, DEFMETHOD=8, SETQ=9, SETF=10, LET=11, S_LPARAN=12, S_RPARAN=13, 
		SINGLE_QUOTE=14, COMMA=15, EQUAL=16, NOTEQUAL=17, GREATER_THAN=18, LESS_THAN=19, 
		GREATER_THAN_OR_EQUAL=20, LESS_THAN_OR_EQUAL=21, ADD=22, SUBTRACT=23, 
		MULTIPLY=24, DIVIDE=25, HASH=26, COLON=27, IF=28, WHEN=29, COND=30, OTHERWISE=31, 
		PROGN=32, UNLESS=33, AND=34, OR=35, NOT=36, T=37, NIL=38, FROM=39, TO=40, 
		COLLECT=41, DO=42, DOTimes=43, DOLIST=44, LOOP=45, PROG=46, FOR=47, BLOCK=48, 
		ERROR=49, EXP=50, EXPT=51, MAX=52, MIN=53, MOD=54, REM=55, QUOTE=56, INITARG=57, 
		INITFORM=58, ACCESSOR=59, MAKE_INSTANCE=60, EQ=61, EQL=62, KEY_EQUAL=63, 
		NOT_EQUAL=64, MAKE_ARRAY=65, AREF=66, LIST=67, PUSH=68, POP=69, SORT=70, 
		INCF=71, DECF=72, MAKE_HASH_TABLE=73, HASH_FUNCTION=74, TEST=75, QUOTE_EQ=76, 
		QUOTE_EQL=77, QUOTE_EQUAL=78, SIZE=79, GETHASH=80, MAPHASH=81, REMHASH=82, 
		CLRHASH=83, LOGNOR=84, LOGXOR=85, LOGAND=86, LOGEQV=87, LOGIOR=88, OPTIONAL=89, 
		REST=90, KEY=91, FUNCTION=92, RETURN=93, RETURN_FROM=94, LAMBDA=95, MAPCAR=96, 
		APPLY=97, FUNCALL=98, CONS=99, CAR=100, CDR=101, INT_NUMBER=102, E_NUMBER=103, 
		FLOAT_NUMBER=104, Complex=105, STRING=106, WS=107, SINGLE_LINE_COMMENT=108, 
		MULTI_LINE_COMMENT=109, FORMAT=110, ATOM=111, LEXER_ERROR=112, FORMAT_DESTINATION=113, 
		FORMAT_STRING_BEGIN=114, FORMAT_WS=115, FORMAT_OPTION=116, FORMAT_STRING=117, 
		FORMAT_STRING_END=118, FORMAT_STRING_WS=119;
	public static final int
		RULE_program = 0, RULE_expression = 1, RULE_operators_expression = 2, 
		RULE_arithmetic_expression = 3, RULE_comparison_expression = 4, RULE_logical_expression = 5, 
		RULE_and_or_expression = 6, RULE_not_expression = 7, RULE_bitwise_expression = 8, 
		RULE_equality_expression = 9, RULE_eq_expression = 10, RULE_eql_expression = 11, 
		RULE_equal_expression = 12, RULE_not_equal_expression = 13, RULE_defining_expressions = 14, 
		RULE_defvar = 15, RULE_defconstant = 16, RULE_defstruct_expression = 17, 
		RULE_defun_expression = 18, RULE_defun_body = 19, RULE_defparameter_expression = 20, 
		RULE_setf_expression = 21, RULE_place = 22, RULE_value = 23, RULE_setq_single_var = 24, 
		RULE_setq_multi_var = 25, RULE_prog = 26, RULE_let = 27, RULE_lambda_expression = 28, 
		RULE_parameter_list = 29, RULE_parameter = 30, RULE_parameter_marker = 31, 
		RULE_optional_parameter = 32, RULE_rest_parameter = 33, RULE_key_parameter = 34, 
		RULE_make_array_expression = 35, RULE_index_list = 36, RULE_aref_expression = 37, 
		RULE_list_expression = 38, RULE_push_expression = 39, RULE_pop_expression = 40, 
		RULE_condition_expression = 41, RULE_condition_clause = 42, RULE_if_expression = 43, 
		RULE_when_expression = 44, RULE_cond_expression = 45, RULE_cond_clause = 46, 
		RULE_progn_expression = 47, RULE_unless_expression = 48, RULE_conses_expression = 49, 
		RULE_cons_expression = 50, RULE_car_expression = 51, RULE_cdr_expression = 52, 
		RULE_special_form_expressions = 53, RULE_quote_expression = 54, RULE_single_quote_expression = 55, 
		RULE_funcall_expression = 56, RULE_apply_expression = 57, RULE_mapcar_expression = 58, 
		RULE_function_name = 59, RULE_function_call_expression = 60, RULE_function_call_parameter = 61, 
		RULE_built_in_functions = 62, RULE_hash_table_expressions = 63, RULE_make_hash_table_expression = 64, 
		RULE_key_argument = 65, RULE_size_function = 66, RULE_test_function = 67, 
		RULE_hash_function = 68, RULE_gethash_expression = 69, RULE_remhash_expression = 70, 
		RULE_clrhash_expression = 71, RULE_maphash_expression = 72, RULE_key = 73, 
		RULE_format_expression = 74, RULE_defclass_expression = 75, RULE_class_name = 76, 
		RULE_parameters = 77, RULE_parameters_options = 78, RULE_initform_expression = 79, 
		RULE_initarg_expression = 80, RULE_accessor_expression = 81, RULE_defmethod_expression = 82, 
		RULE_defmethod_parameters = 83, RULE_make_instance_expression = 84, RULE_initialization_argument = 85, 
		RULE_tuple_with_paran = 86, RULE_tuple_without_paran = 87, RULE_real_number = 88;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expression", "operators_expression", "arithmetic_expression", 
			"comparison_expression", "logical_expression", "and_or_expression", "not_expression", 
			"bitwise_expression", "equality_expression", "eq_expression", "eql_expression", 
			"equal_expression", "not_equal_expression", "defining_expressions", "defvar", 
			"defconstant", "defstruct_expression", "defun_expression", "defun_body", 
			"defparameter_expression", "setf_expression", "place", "value", "setq_single_var", 
			"setq_multi_var", "prog", "let", "lambda_expression", "parameter_list", 
			"parameter", "parameter_marker", "optional_parameter", "rest_parameter", 
			"key_parameter", "make_array_expression", "index_list", "aref_expression", 
			"list_expression", "push_expression", "pop_expression", "condition_expression", 
			"condition_clause", "if_expression", "when_expression", "cond_expression", 
			"cond_clause", "progn_expression", "unless_expression", "conses_expression", 
			"cons_expression", "car_expression", "cdr_expression", "special_form_expressions", 
			"quote_expression", "single_quote_expression", "funcall_expression", 
			"apply_expression", "mapcar_expression", "function_name", "function_call_expression", 
			"function_call_parameter", "built_in_functions", "hash_table_expressions", 
			"make_hash_table_expression", "key_argument", "size_function", "test_function", 
			"hash_function", "gethash_expression", "remhash_expression", "clrhash_expression", 
			"maphash_expression", "key", "format_expression", "defclass_expression", 
			"class_name", "parameters", "parameters_options", "initform_expression", 
			"initarg_expression", "accessor_expression", "defmethod_expression", 
			"defmethod_parameters", "make_instance_expression", "initialization_argument", 
			"tuple_with_paran", "tuple_without_paran", "real_number"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'defun'", "'defvar'", "'defconstant'", "'defstruct'", "'defmacro'", 
			"'defclass'", "'defparameter'", "'defmethod'", "'setq'", "'setf'", "'let'", 
			"'('", "')'", null, null, "'='", "'/='", "'>'", "'<'", "'>='", "'<='", 
			"'+'", "'-'", "'*'", "'/'", "'#'", "':'", "'if'", "'when'", "'cond'", 
			"'otherwise'", "'progn'", "'unless'", "'and'", "'or'", "'not'", "'t'", 
			"'nil'", "'from'", "'to'", "'collect'", "'do'", "'dotimes'", "'dolist'", 
			"'loop'", "'prog'", "'for'", "'block'", "'error'", "'exp'", "'expt'", 
			"'max'", "'min'", "'mod'", "'rem'", "'quote'", "'initarg'", "'initform'", 
			"'accessor'", "'make-instance'", "'eq'", "'eql'", "'equal'", "'not-equal'", 
			"'make-array'", "'aref'", "'list'", "'push'", "'pop'", "'sort'", "'incf'", 
			"'decf'", "'make-hash-table'", "'hash-function'", "'test'", null, null, 
			null, "'size'", "'gethash'", "'maphash'", "'remhash'", "'clrhash'", "'lognor'", 
			"'logxor'", "'logand'", "'logeqv'", "'logior'", "'&optional'", "'&rest'", 
			"'&key'", "'function'", "'return'", "'return_from'", "'lambda'", "'mapcar'", 
			"'apply'", "'funcall'", "'cons'", "'car'", "'cdr'", null, null, null, 
			"'#c'", null, null, null, null, "'format'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEFUN", "DEFVAR", "DEFCONSTANT", "DEFSTRUCT", "DEFMACRO", "DEFCLASS", 
			"DEFPARAMETER", "DEFMETHOD", "SETQ", "SETF", "LET", "S_LPARAN", "S_RPARAN", 
			"SINGLE_QUOTE", "COMMA", "EQUAL", "NOTEQUAL", "GREATER_THAN", "LESS_THAN", 
			"GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", "ADD", "SUBTRACT", "MULTIPLY", 
			"DIVIDE", "HASH", "COLON", "IF", "WHEN", "COND", "OTHERWISE", "PROGN", 
			"UNLESS", "AND", "OR", "NOT", "T", "NIL", "FROM", "TO", "COLLECT", "DO", 
			"DOTimes", "DOLIST", "LOOP", "PROG", "FOR", "BLOCK", "ERROR", "EXP", 
			"EXPT", "MAX", "MIN", "MOD", "REM", "QUOTE", "INITARG", "INITFORM", "ACCESSOR", 
			"MAKE_INSTANCE", "EQ", "EQL", "KEY_EQUAL", "NOT_EQUAL", "MAKE_ARRAY", 
			"AREF", "LIST", "PUSH", "POP", "SORT", "INCF", "DECF", "MAKE_HASH_TABLE", 
			"HASH_FUNCTION", "TEST", "QUOTE_EQ", "QUOTE_EQL", "QUOTE_EQUAL", "SIZE", 
			"GETHASH", "MAPHASH", "REMHASH", "CLRHASH", "LOGNOR", "LOGXOR", "LOGAND", 
			"LOGEQV", "LOGIOR", "OPTIONAL", "REST", "KEY", "FUNCTION", "RETURN", 
			"RETURN_FROM", "LAMBDA", "MAPCAR", "APPLY", "FUNCALL", "CONS", "CAR", 
			"CDR", "INT_NUMBER", "E_NUMBER", "FLOAT_NUMBER", "Complex", "STRING", 
			"WS", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "FORMAT", "ATOM", 
			"LEXER_ERROR", "FORMAT_DESTINATION", "FORMAT_STRING_BEGIN", "FORMAT_WS", 
			"FORMAT_OPTION", "FORMAT_STRING", "FORMAT_STRING_END", "FORMAT_STRING_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode S_LPARAN() { return getToken(MyParser.S_LPARAN, 0); }
		public TerminalNode S_RPARAN() { return getToken(MyParser.S_RPARAN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(S_LPARAN);
			setState(180); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(179);
				expression();
				}
				}
				setState(182); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==S_LPARAN || _la==SINGLE_QUOTE );
			setState(184);
			match(S_RPARAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Operators_expressionContext operators_expression() {
			return getRuleContext(Operators_expressionContext.class,0);
		}
		public Defining_expressionsContext defining_expressions() {
			return getRuleContext(Defining_expressionsContext.class,0);
		}
		public Push_expressionContext push_expression() {
			return getRuleContext(Push_expressionContext.class,0);
		}
		public Pop_expressionContext pop_expression() {
			return getRuleContext(Pop_expressionContext.class,0);
		}
		public Condition_expressionContext condition_expression() {
			return getRuleContext(Condition_expressionContext.class,0);
		}
		public Conses_expressionContext conses_expression() {
			return getRuleContext(Conses_expressionContext.class,0);
		}
		public Equality_expressionContext equality_expression() {
			return getRuleContext(Equality_expressionContext.class,0);
		}
		public Special_form_expressionsContext special_form_expressions() {
			return getRuleContext(Special_form_expressionsContext.class,0);
		}
		public Funcall_expressionContext funcall_expression() {
			return getRuleContext(Funcall_expressionContext.class,0);
		}
		public Apply_expressionContext apply_expression() {
			return getRuleContext(Apply_expressionContext.class,0);
		}
		public Mapcar_expressionContext mapcar_expression() {
			return getRuleContext(Mapcar_expressionContext.class,0);
		}
		public Function_call_expressionContext function_call_expression() {
			return getRuleContext(Function_call_expressionContext.class,0);
		}
		public Hash_table_expressionsContext hash_table_expressions() {
			return getRuleContext(Hash_table_expressionsContext.class,0);
		}
		public Format_expressionContext format_expression() {
			return getRuleContext(Format_expressionContext.class,0);
		}
		public Defclass_expressionContext defclass_expression() {
			return getRuleContext(Defclass_expressionContext.class,0);
		}
		public Make_instance_expressionContext make_instance_expression() {
			return getRuleContext(Make_instance_expressionContext.class,0);
		}
		public Defmethod_expressionContext defmethod_expression() {
			return getRuleContext(Defmethod_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(203);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				operators_expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				defining_expressions();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(188);
				push_expression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(189);
				pop_expression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(190);
				condition_expression();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(191);
				conses_expression();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(192);
				equality_expression();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(193);
				special_form_expressions();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(194);
				funcall_expression();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(195);
				apply_expression();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(196);
				mapcar_expression();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(197);
				function_call_expression();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(198);
				hash_table_expressions();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(199);
				format_expression();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(200);
				defclass_expression();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(201);
				make_instance_expression();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(202);
				defmethod_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Operators_expressionContext extends ParserRuleContext {
		public Arithmetic_expressionContext arithmetic_expression() {
			return getRuleContext(Arithmetic_expressionContext.class,0);
		}
		public Comparison_expressionContext comparison_expression() {
			return getRuleContext(Comparison_expressionContext.class,0);
		}
		public Logical_expressionContext logical_expression() {
			return getRuleContext(Logical_expressionContext.class,0);
		}
		public Bitwise_expressionContext bitwise_expression() {
			return getRuleContext(Bitwise_expressionContext.class,0);
		}
		public Make_array_expressionContext make_array_expression() {
			return getRuleContext(Make_array_expressionContext.class,0);
		}
		public Aref_expressionContext aref_expression() {
			return getRuleContext(Aref_expressionContext.class,0);
		}
		public List_expressionContext list_expression() {
			return getRuleContext(List_expressionContext.class,0);
		}
		public Operators_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operators_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterOperators_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitOperators_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitOperators_expression(this);
			else return visitor.visitChildren(this);
		}
	}
